--- a/example/course-resources/fork/st-index.yaml
+++ b/example/course-resources/fork/st-index.yaml
@@ -20,3 +20,4 @@ asset_index:
     view-show-head: "Show HEAD (顯示工作中版本)"
     create-branch: "Create New Branch...(建立新分支...)"
     create-branch-modal-confirm: "Create(建立)"
+    checkout-branch-item: "Checkout...(切換...)"
