--- a/example/course-resources/fork/levels-index.yaml
+++ b/example/course-resources/fork/levels-index.yaml
@@ -36,6 +36,7 @@ asset_index:
 
   # level names of section five
     main.create-branch.name: "5-1 節：建立分支標註出特定版本"
+    main.checkout-branch.name: "5-2 節：切換工作中版本到分支上並在分支上提交"
 
   ondisk:
   # level configs of section one: intro
@@ -66,3 +67,4 @@ asset_index:
 
   # level configs of section five: create and checkout branches
     create-branch: "create-branch.yaml"
+    checkout-branch: "checkout-branch.yaml"
