--- a/example/course-resources/fork/images-index.yaml
+++ b/example/course-resources/fork/images-index.yaml
@@ -134,3 +134,5 @@ asset_index:
     instruct-checkout-master-1: checkout-branch@instruct-checkout-master-1.png
     compare-master-before-after-commit: checkout-branch@compare-master-before-after-commit.png
     compare-current-and-other-branch-mark: checkout-branch@compare-current-and-other-branch-mark.png
+    elaborate-current-branch-display: checkout-branch@elaborate-current-branch-display.png
+    elaborate-checkout-branch-meaning: checkout-branch@elaborate-checkout-branch-meaning.png
