--- a/example/course-resources/fork/level-data/checkout-branch-index.yaml
+++ b/example/course-resources/fork/level-data/checkout-branch-index.yaml
@@ -126,84 +126,18 @@ asset_index:
       目標的${{t/branch}}就會被標成「當前的${{t/branch}}」  
       表示現在建立${{t/revision}}的話，這個${{t/branch}}會跟著移動  
 
-    findout-current-branch: |+2
-      .md
-      在之後的教學中，我們會發現 git 的複雜與威力正是來自於我們會頻繁的在多個${{t/branch}}之間切換  
-      在這個過程中，一不小心就會忘記自己到底跑去哪個${{t/branch}}  
-
-      因此，${{t/gui}}提供了一些簡便的方法來讓我們確認目前是切換到哪個${{t/branch}}  
-      因為我們剛剛${{t/checkout-branch}}到 master 上  
-      如果觀察${{t/gui}}的話應該會看到如下圖(五)紅框所方大的範圍中  
-      明確地顯示 master 來代表目前的${{t/branch}}  
-
-      ![illustration]({{images/elaborate-current-branch-display}})  
-      <div class="img-title">圖(五)</div>  
-
-      而當我們想要描述「 git 切換到某個${{t/branch}}之後的狀態」  
-      我們會形容它是「位於某某${{t/branch}}」或「處在${{t/branch}}上」  
-      例如現在，我們會說目前「位於 master 上」  
-
-    elaborate-current-branch: |+2
-      .md
-      嗯...所謂的「位於某某${{t/branch}}上」到底又是甚麼意思呢？  
-      其實它是跟我們的一個老朋友：「**${{t/head-f}}**」有關  
-      請讓我們以下面的圖(六)來說明  
-
-      ![illustration]({{images/elaborate-checkout-branch-meaning}})  
-      <div class="img-title">圖(六)</div>  
-
-      按照慣例，我們以圓球代表「${{t/revision}}」，五邊形標籤代表「${{t/head}}」
-      而四方型標記，則代表「${{t/branch}}」  
-
-      上圖分別以從左到右的變化，來表示我們剛才學習的「${{t/checkout-branch}}」這個操作的效果  
-      也就是將${{t/head}}指向(挪動)到一個${{t/branch}}上面  
-
-      沒錯！${{t/branch}}也是一個${{t/head}}可以指向的東西  
-      而${{t/branch}}自己也總是會指向某一個${{t/revision}}  
-
-      說到這裡，指來指去的，是不是很讓人感到困惑呢？  
-      其實我們只需要知道
-      1. ${{t/checkout-branch}}會讓${{t/head}}指向一個${{t/branch}}
-      2. 接著，我們建立${{t/revision}}的時候，分支會跟著新建立的${{t/revision}}前進  
-      就好了  
-
-    more-on-current-branch: |+2
-      .md
-      如果有興趣深入了解前面說的指來指去的到底是甚麼意思，請繼續閱讀這個區塊的說明  
-      或是也可以選擇直接按下「確認」按鈕跳過，繼續後面的步驟
-
-      現在，我們知道「切換到某某分支」的意思是  
-      ${{t/head}}會指向某某${{t/branch}}(以下簡稱 B)，而 B 又指向一個${{t/revision}}(以下簡稱 R)  
-      要理解這代表了甚麼，可以讓我們分段拆解它  
-
-      首先，我們曾經學過跟這句話的後半段很像的事情  
-      當${{t/head}}指向 R 的時候，表示以下幾件事情  
-
-      1. 可以操作的檔案被還原到 R 的狀態  
-      2. 如果修改了檔案，會跟 R 的狀態對比差異，顯示成${{t/unstaged}}以及${{t/staged}}  
-      3. 如果建立新的${{t/revision}}，它的父版本會是 R。${{t/head}}會指向新${{t/revision}}  
-
-      而實際上，${{t/head}}指向 B，且 B 指向 R  
-      就代表${{t/head}}可以間接地透過 B 得到 R  
-      所以這代表以下幾件事情  
-
-      1. 可以操作的檔案被還原到 R 的狀態(透過 B 得知)。這和前面說的 1. 一樣。  
-      2. 如果修改了檔案，會跟 R 的狀態(透過 B 得知)對比差異，顯示成${{t/unstaged}}以及${{t/staged}}。這也和前面的 2. 說的一樣。  
-      3. 如果建立新的${{t/revision}}，它的父版本會是 $ (原本 B 指向的${{t/revision}})。B 會指向新${{t/revision}}
-      4. 最後，額外加上 ${{t/head}}維持指向 B  
-
-      所得到的效果就是前面所說的  
-      ${{t/checkout-branch}}}到 B 之後，無論我們建立幾個新的${{t/revision}}  
-      B 都會跟著指到最新的${{t/revision}}  
-      而${{t/head}}維持指向 B  
 
     summary: |+2
       .md
       在這個章節中  
       我們介紹了如何切換${{t/branch}}  
       還有切換完之後，就可以確保${{t/branch}}可以跟隨著我們新增${{t/revision}}的腳步前進  
-      因為切換分支將會是一個非常頻繁使用的操作  
-      我們在下一個章節中還會繼續介紹如何有效率的切換分支  
+
+      嗯...「**切換**」這個詞好像之前我們已經用得很多了  
+      沒錯！我們剛剛學習切換的是「**${{t/branch}}**」  
+      而以前我們學習的，是切換「**${{t/revision}}**」  
+      
+      他們之間到底有甚麼差別呢？我們將在下一個章節中詳細說明，敬請期待
       
 
 # repository assets
