--- a/example/course-resources/fork/archives-index.yaml
+++ b/example/course-resources/fork/archives-index.yaml
@@ -2,3 +2,4 @@ asset_index:
   ondisk:
     basic-operation: basic-operation.zip
     commits-advanced: commits-advanced.zip
+    checkout-branches: checkout-branches.zip
