--- a/example/course-resources/fork/st-index.yaml
+++ b/example/course-resources/fork/st-index.yaml
@@ -20,5 +20,6 @@ asset_index:
     view-show-head: "Show HEAD (顯示工作中版本)"
     create-branch: "Create New Branch...(建立新分支...)"
     create-branch-modal-confirm: "Create(建立)"
+    create-branch-modal-confirm-2: "Create and Checkout (建立並切換)"
     checkout-branch-item: "Checkout...(切換...)"
     checkout-after-create-checkbox: "Check out after create (建立之後切換)"
